--- a/resume.html
+++ b/resume.html
@@ -48,12 +48,12 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Beranda</a></li>
-          <li><a href="about.html">Tentang Saya</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Me</a></li>
           <li><a class="active" href="resume.html">Resume</a></li>
-          <li><a href="services.html">Pelayanan</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Kontak</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html">Portofolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -77,47 +77,60 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Berikut adalah resume singkat mengenai pendidikan dan pengalaman kerja saya.</p>
+          <p>Here is a brief resume of my education and work experience.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
 
-            <h3 class="resume-title">Pendidikan</h3>
+            <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Sarjana Komputer - IPK 3.49</h4>
-              <h5>2019 - 2023</h5>
-              <p><em>Sekolah Tinggi Teknologi Wastukancana Purwakarta</em></p>
-              <p>Kuliah di Sekolah Tinggi Teknologi Wastukancana Purwakarta jurusan Teknik Informatika. Melaksanakan Kerja Praktek dengan membuat aplikasi kasir berbasis WEB di UMKM Warput. Tema skripsi tentang UI/UX Design dengan judul "REDESIGN UI/UX DESIGN APLIKASI IDENTITAS KEPENDUDUKAN DIGITAL MENGGUNAKAN METODE USER CENTERED DESIGN (UCD)"  </p>
+              <h4>Bachelor of Computer - IPK 3.49</h4>
+              <h5>Sekolah Tinggi Teknologi Wastukancana Purwakarta</h5>
+              <p><em>2019 - 2023</em></p>
+              <p>Studying at Wastukancana Purwakarta College of Technology majoring in Informatics Engineering. Carrying out practical work by making WEB-based cashier applications at Warput UMKM. Thesis theme about UI/UX Design with the title “REDESIGN UI/UX DESIGN DIGITAL IDENTITY APPLICATION USING USER CENTERED DESIGN (UCD) METHODS”.</p>
             </div>
             <div class="resume-item">
-              <h4>SMK - NA 8.77</h4>
-              <h5>2014 - 2017</h5>
-              <p><em>SMK Negeri 1 Purwakarta</em></p>
-              <p>Jurusan Teknik Audio Video. Melaksanakan Praktek Kerja Lapangan (PKL) di PT Elegant Textile Industry sebagai Electrical Engieering</p>
+              <h4>Vocational High School - NA 8.77</h4>
+              <h5>SMK Negeri 1 Purwakarta</h5>
+              <p><em>2014 - 2017</em></p>
+              <p>Major in Audio Video Technology. Carried out Field Work Practice (PKL) at PT Elegant Textile Industry as Electrical Engieering.</p>
             </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Pengalaman Kerja</h3>
+            <h3 class="resume-title">Work Experience</h3>
             <div class="resume-item">
-              <h4>Team Leader IT Support</h4>
-              <h5>November 2023</h5>
-              <p><em>PT Sucofindo </em></p>
+              <h4>Data Center Operator</h4>
+              <h5>PT VisioNet Data Internasional - Purwakarta, West Java</h5>
+              <p><em>April 2024 - April 2025</em></p>
               <p>
               <ul>
-                <li>Team Leader IT Support pada event Test SKD CASN Kejaksaan R.i 2023, titik lokasi Raz Residence Medan, Sumatera Utara. </li>
-                <li>Melakukan instalasi jaringan pada laptop dan memastikan jaringan layak untuk digunakan pada saat test berlangsung. </li>
-                <li>Melakukan Instalasi kelistrikan untuk daya laptop dari panel listrik yang tersedia, dan membagi daya sesuai kebutuhan jumlah laptop yang tersedia.</li>
-                <li>Memasang UPS untuk Switch Hub, untuk berjaga-jaga apabila terjadi kendala pada kelistrikan. </li>
-                <li>Menjaga komunikasi antar anggota tim, serta membagi tugas untuk anggota tim. </li>
-                <li>Berkomunikasi dengan baik dengan pihak-pihak yang ikut serta dalam pelaksanaan event tersebut (BKN, Kejaksaan, Teknisi Laptop, Kordinator Lapangan, Pihak Hotel Dll. </li>
+                <li>Check daily / monitoring server room (Temperature, Humadity, FM200, HSSD, and MCB) </li>
+                <li>UPS and Genset Monitoring </li>
+                <li>Report & Escalate to the customer when there is a problem on the Server</li>
+                <li>Filling in the Job Checklist from Data Center Operation unit </li>
+                <li>Serve customer audit task & provide customer audit information </li>
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Team Leader IT Support Project Test SKD CASN Kejaksaan R.I 2023</h4>
+              <h5>PT Sucofindo - Medan, North Sumatra</h5>
+              <p><em>November 2023</em></p>
+              <p>
+              <ul>
+                <li>Installing the laptop network and ensuring the connection is ready for use during the test.</li>
+                <li>Electrical installation for laptop power and power distribution as needed.</li>
+                <li>Install UPS for Switch Hub as power backup. </li>
+                <li>Coordination and division of tasks between team members.</li>
+                <li>Communication with related parties (BKN, Attorney, Technician, Field Coordinator, Hotel, etc.).</li>
               </ul>
               </p>
             </div>
             <div class="resume-item">
               <h4>Operator Produksi</h4>
-              <h5>2018 - 2020</h5>
-              <p><em>PT Yamaha Indonesia Motor Mfg West Java</em></p>
+              <h5>PT Yamaha Indonesia Motor Mfg West Java - Karawang, West Java</h5>
+              <p><em>2018 - 2020</em></p>
               <p>
               <ul>
                 <li>Loading Fueltank</li>
