--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Tentang Saya</title>
+  <title>About Me</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,12 +48,12 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Beranda</a></li>
-          <li><a class="active" href="about.html">Tentang Saya</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="about.html">About Me</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Pelayanan</a></li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Kontak</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -76,12 +76,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Tentang Saya</h2>
-          <p>Saya remaja berusia 24 tahun. Saya ingin berpartisipasi dalam kesuksesan perusahaan
-            melalui kerja keras, memberikan loyalitas dan dedikasi, serta melatih fleksibilitas dan
-            bekerja dalam tim. Saya memiliki motivasi untuk terus belajar, berkembang, dan
-            bertekad di industri apa pun dan seorang individu yang teliti, pekerja keras, dan optimis
-            yang mampu menyesuaikan diri dengan lingkungan yang dinamis.</p>
+          <h2>About Me</h2>
+          <p>I am a 24-year-old teenager. I would like to participate in the company's success through hard work, providing loyalty and dedication, as well as practicing flexibility and working in a team. I have the motivation to continuously learn, develop, and be determined in any industry and am a conscientious, hardworking, and optimistic individual who is able to adjust to a dynamic environment.</p>
         </div>
 
         <div class="row">
@@ -93,20 +89,20 @@
           
             <div class="row">
               <p>
-              Saya memiliki pengalaman dalam pembuatan aplikasi Kasir berbasis WEB, dengan menggunakan framework CodeIgniter dan database MySql.
-              Bahasa pemrograman yang saya kuasai adalah PHP, CSS, JavaScript. Saya juga pernah membuat desain baru aplikasi Identitas Kependudukan DIgital.
+              I have experience in making WEB-based Cashier applications, using the CodeIgniter framework and MySql database. 
+                The programming languages that I master are PHP, CSS, JavaScript. I have also created a new design for the Digital Population Identity application.
             </p>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>TTL:</strong> 08 April 1999</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>No Telepon:</strong> +62 831 0120 6364</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Kota:</strong> Purwakarta, Jawa Barat, Indonesia</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 08 April 1999</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +62 831 0120 6364</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Purwakarta, West Java, Indonesia</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Umur:</strong> 24</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Gelar:</strong> Sarjana Komputer</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 24</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Bachelor </li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> ilham.tendy@gmail.</li>
                 </ul>
               </div>
@@ -124,7 +120,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Beberapa Skill yang saya kuasai</p>
+          <p>Some of the skills I've mastered</p>
         </div>
 
         <div class="row skills-content">
