--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="active" href="index.html">Beranda</a></li>
-          <li><a href="about.html">Tentang Saya</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="about.html">About Me</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Pelayanan</a></li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Kontak</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -74,7 +74,7 @@
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Tendy Ilhamudin Firdaus</h1>
       <h2>I'm a Junior Programing & UI/UX Designer from Purwakarta</h2>
-      <a href="about.html" class="btn-about">Tentang Saya</a>
+      <a href="about.html" class="btn-about">About Me</a>
     </div>
   </section><!-- End Hero -->
 
