--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Hubungi Saya - Tendy</title>
+  <title>Contact Me - Tendy</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,12 +48,12 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Beranda</a></li>
-          <li><a href="about.html">Tentang Saya</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Me</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Pelayanan</a></li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a class="active" href="contact.html">Kontak</a></li>
+          <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -76,7 +76,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Hubungi Saya</h2>
+          <h2>Contact Me</h2>
           <p></p>
         </div>
 
