--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Jasa - Tendy</title>
+  <title>Services - Tendy</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,12 +48,12 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Beranda</a></li>
-          <li><a href="about.html">Tentang Saya</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="about.html">About Me</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a class="active" href="services.html">Jasa</a></li>
+          <li><a class="active" href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Kontak</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -77,7 +77,7 @@
 
         <div class="section-title">
           <h2>Jasa</h2>
-          <p>Berikut adalah beberapa jasa yang saya sediakan</p>
+          <p>Here are some of the services I provide</p>
         </div>
 
         <div class="row">
@@ -90,7 +90,7 @@
                 <i class="bx bxl-dribbble"></i>
               </div>
               <h4><a href="">UI/UX Design</a></h4>
-              <p>Dengan fokus pada optimalisasi pengalaman pengguna, jasa UI/UX kami dirancang untuk membawa kesuksesan jangka panjang bagi bisnis Anda.</p>
+              <p>With a focus on optimizing user experience, our UI/UX services are designed to bring long-term success to your business.</p>
             </div>
           </div>
 
@@ -103,7 +103,7 @@
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">Copywriter</a></h4>
-              <p>Beradaptasi dengan kebutuhan pasar, kami menghadirkan copywriting yang cerdas dan efektif untuk merespons tren dan perubahan.</p>
+              <p>Adapting to market needs, we deliver smart and effective copywriting to respond to trends and changes.</p>
             </div>
           </div>
 
@@ -116,7 +116,7 @@
                 <i class="bx bx-tachometer"></i>
               </div>
               <h4><a href="">Programing</a></h4>
-              <p>Menghadirkan solusi pengembangan perangkat lunak yang efisien dan efektif untuk meningkatkan produktivitas dan kinerja bisnis.</p>
+              <p>Delivering efficient and effective software development solutions to improve business productivity and performance.</p>
             </div>
           </div>
 
