--- a/services.html
+++ b/services.html
@@ -76,7 +76,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Jasa</h2>
+          <h2>Services</h2>
           <p>Here are some of the services I provide</p>
         </div>
 
