--- a/about.html
+++ b/about.html
@@ -77,7 +77,9 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <p>I am a 24-year-old teenager. I would like to participate in the company's success through hard work, providing loyalty and dedication, as well as practicing flexibility and working in a team. I have the motivation to continuously learn, develop, and be determined in any industry and am a conscientious, hardworking, and optimistic individual who is able to adjust to a dynamic environment.</p>
+          <p>A Data Center Operator with experience in managing operations and monitoring of Data Center and Disaster Recovery Center in the banking sector. 
+            Skilled in monitoring servers, networks, transaction applications, batch processes, and performing daily backups. 
+            Proficient in physical security procedures for Data Centers, technical troubleshooting, and preparing operational reports.</p>
         </div>
 
         <div class="row">
@@ -103,7 +105,7 @@
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 24</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Bachelor </li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> ilham.tendy@gmail.</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> ilham.tendy@gmail.com</li>
                 </ul>
               </div>
             </div>
